static/src/app/scss/styles.scss
// This is a customized Bootstrap theme, following instructions from
// https://getbootstrap.com/docs/4.6/getting-started/theming/

// Configure Bootstrap variables.
// Full list of variables in 'src/vendor/bootstrap/scss/_variables.scss'.

$white: #fff;
$black: rgba(0, 0, 0, 0.84);
$accent: #33766B;  // Custom variable.

$theme-colors:
(
  "accent": $accent,
);

$primary: $accent;

$grid-breakpoints: (
  // Remove Bootstrap's xs.
  sm: 0,
  md: 768px,
  lg: 960px,
  xl: 1200px
);

$container-max-widths: (
  // Remove Bootstrap's sm, md & lg.
  xl: 1184px
);

$border-color: #efefef;
$border-radius: 0;

$font-family-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
$font-family-oswald: 'Oswald', "Helvetica Neue", helvetica, arial, sans-serif;  // Custom variable.
$font-size-base: 1rem;
$headings-font-family: $font-family-oswald;
$headings-font-weight: 600;

$h1-font-size: $font-size-base * 2.125;
$h2-font-size: $font-size-base * 1.75;
$h3-font-size: $font-size-base * 1.5;
$h4-font-size: $font-size-base * 1.25;
$h5-font-size: $font-size-base * 1.1;
$h6-font-size: $font-size-base;

$nav-link-padding-x: 1.3rem;
$nav-link-font-family: $font-family-oswald;  // Custom variable.
$nav-link-font-size: $font-size-base * 1.125;  // Custom variable.
$nav-link-font-weight: 400;  // Custom variable.
$navbar-padding-x: 2rem;
$navbar-padding-y: 1.125rem;
$navbar-brand-padding-y: 0;
$navbar-brand-font-size: 1.875rem;
$navbar-toggler-padding-y: .5rem;
$navbar-light-color: $black;
$navbar-light-active-color: $black;
$navbar-light-hover-color: rgba(0,0,0,.7);
$navbar-light-toggler-border-color: $border-color;

$card-border-color: $border-color;
$input-border-color: $border-color;
$dropdown-border-color: $border-color;
$pagination-border-color: $border-color;
$pagination-disabled-border-color: $border-color;
$breadcrumb-bg: #f8f9fa;

$dropdown-link-hover-bg: #dee2e6;  // $gray-300

// Import selected Bootstrap components.
// Full list of imports in 'assets/vendor/bootstrap/scss/bootstrap.scss'.
@import "functions";
@import "variables";
@import "mixins";
@import "root";
@import "reboot";
@import "type";
@import "images";
@import "code";
@import "grid";
// @import "tables";
@import "forms";
@import "buttons";
@import "transitions";
@import "dropdown";
@import "button-group";
@import "input-group";
@import "custom-forms";
@import "nav";
@import "navbar";
@import "card";
@import "breadcrumb";
@import "pagination";
@import "badge";
// @import "jumbotron";
@import "alert";
// @import "progress";
// @import "media";
// @import "list-group";
@import "close";
// @import "toasts";
@import "modal";
// @import "tooltip";
// @import "popover";
// @import "carousel";
// @import "spinners";
@import "utilities";
@import "print";

// Import FontAwesome styles.
@import "fontawesome.scss";
@import "solid.scss";
@import "regular.scss";

// WARNING: Webfonts are manually copied to the 'static' directory. If upgrading
// FontAwesome, please manually copy the new webfonts,


// WARNING: Some styles below are copied from Kerko. Kerko's stylesheet is not
// used, thus any change to Kerko's stylesheet might need to be applied here.


// General.

.list-no-bullets {
  list-style-type: none;
}
.no-decorate:hover,
.no-decorate:focus {
  text-decoration: none;
}
:hover > .parent-decorate,
:focus > .parent-decorate {
  text-decoration: underline;
}
.break-word {
  word-wrap: break-word;  // Older, non-standard name for overflow-wrap.
  overflow-wrap: break-word;
}
.pre-line {
  white-space: pre-line;
}
.more-or-less[aria-expanded="true"] span.more {
  display: none;
}
.more-or-less[aria-expanded="false"] span.more {
  display: inline;
}
.more-or-less[aria-expanded="true"] span.less {
  display: inline;
}
.more-or-less[aria-expanded="false"] span.less {
  display: none;
}
.d-none-important {
  display: none !important;
}

// Layout.

main {
  min-height: calc(100vh - 6rem - 5.6125rem);
  padding-top: 1rem;
  padding-bottom: 1rem;
  @include media-breakpoint-up(lg) {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

// Headings.

.rule {
  margin-top: 3.5rem;
  &::before {
    content: " ";
    display: block;
    height: 4px;
    background-color: $primary;
    width: 70px;
    margin-bottom: 15px;
  }
  @media print {
    margin-top: 0;
  }
}

// Navbar.

.navbar {
  padding-left: 0;
  padding-right: 0;
  border-bottom: $border-width solid $border-color;
  text-align: center;
  .nav-item {
    padding: 0 $navbar-padding-x;
    font-family: $nav-link-font-family;
    font-size: $nav-link-font-size;
    font-weight: $nav-link-font-weight;
    text-transform: uppercase;
    letter-spacing: .8px;
    @include media-breakpoint-up(lg) {
      padding: $nav-link-padding-y 0;
      margin-left: $nav-link-padding-x;
      margin-right: $nav-link-padding-x;
      &:first-child {
        margin-left: 0;
      }
    }
  }
  .nav-link {
    padding: 10px 0 !important;
    border-bottom: 3px solid transparent;
    margin-top: 3px;
    text-align: left;
    white-space: nowrap;
    @include media-breakpoint-up(lg) {
      padding: 0 !important;
      margin-top: 0;
      display: inline-block;
    }
    @include hover-focus {
      color: $navbar-light-hover-color !important;
      border-bottom-color: $primary;
    }
  }
  .nav-item.active .nav-link {
    border-bottom-color: $primary;
  }
}

.navbar-brand {
  width: 100%;
  padding-bottom: $navbar-padding-y;
  border-bottom: $border-width solid $border-color;
  margin-right: 0;
  white-space: normal;
  @include media-breakpoint-up(lg) {
    width: auto;
    padding-bottom: 0;
    border-bottom: 0;
    margin-right: $navbar-padding-x;
    text-align: left;
  }
}
.navbar-toggler {
  display: block;
  margin-top: $navbar-padding-y;
  font-family: $nav-link-font-family;
  font-size: $nav-link-font-size;
  font-weight: $nav-link-font-weight;
  text-transform: uppercase;
  letter-spacing: .05em;
}
.navbar-toggler-icon {
  font-size: $font-size-base * .75;
  vertical-align: top;
}
.navbar-nav {
  padding-top: $navbar-padding-y;
  padding-bottom: $navbar-padding-y;
  margin-top: $navbar-padding-y;
  margin-left: 0;
  margin-right: 0;
  background: #fbfbfb;
  @include media-breakpoint-up(lg) {
    padding: 0;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: -$nav-link-padding-x;
    background: transparent;
  }
}
.brand-title {
  font-family: $headings-font-family;
  font-size: 1.25rem;
  @include media-breakpoint-up(lg) {
    font-size: $navbar-brand-font-size;
  }
  font-weight: $headings-font-weight;
  line-height: 1.25;
  color: $black;
  @include hover() {
    color: $black;
    opacity: .7;
    text-decoration: none;
  }
}
.brand-subtitle {
  font-size: $font-size-base;
  color: $primary;
  letter-spacing: .05em;
}

// Badge.

.heading-results > .badge {
  background: transparent;
  font-size: $font-size-base;
  font-family: $font-family-sans-serif;
  font-weight: normal;
  line-height: 1.5;
  text-transform: none;
  @media print {
    border: none;
  }
}

// Dropdown.

.dropdown-item {
  white-space: normal;  // Override Bootstrap's no-wrap default.
}
.dropdown-width-300 {
  width: 300px;
  max-width: 90vw;
}

// Expand/collapse.

.btn-expand[aria-expanded="true"] {
  display: none;
}
.btn-expand[aria-expanded="true"] + .btn-collapse {
  display: inline;
}
.btn-expand[aria-expanded="false"] {
  display: inline;
}
.btn-expand[aria-expanded="false"] + .btn-collapse {
  display: none;
}
.continued-hint {
  -webkit-mask-image: linear-gradient(to top, transparent, black 2.75rem);
  mask-image: linear-gradient(to top, transparent, black 2.75rem);
}
.btn-toggle[active] > .btn-toggle-icon-off {
  display: none;
}
.btn-toggle:not([active]) > .btn-toggle-icon-on {
  display: none;
}

// Print links.

.no-js .print-link {
  display: none;
}

// Search.

.breadbox > .card-body {
  > * {
    margin-top: 1rem;
    &:first-child {
      margin-top: 0;
    }
  }
}
.search-item {
  margin-top: 1em;
  margin-bottom: 1em;
  a {
    color: $black;
    .csl-block:first-of-type {
      font-size: $h4-font-size;
      font-weight: bold;
      color: $accent;
    }
    @include hover {
      color: $black;
      text-decoration: none;
      .csl-block:first-of-type {
        color: $black;
      }
    }
  }
  .btn-link {
    transition: none;
    @include hover {
      color: $black !important;
      span {
        color: $black !important;
        text-decoration: underline;
      }
    }
  }
}
.search-abstract {
  font-size: .875em;  // Match .btn-sm font-size.
  .search-print-preview & {
    margin-left: 1em;  // Match APA style indent.
  }
}

// Print media styles.

@media print {
  .row {
    // Fix for truncated pages in Firefox (issue with display: flex).
    // Ref: https://bugzilla.mozilla.org/show_bug.cgi?id=939897
    // Breaks column layouts, but we can live with that.
    display: block !important;
  }
  .text-md-right.text-print-left {
    text-align: left !important;
  }
  .breadbox a {
    text-decoration: none;
  }
  .search-item a,
  .item-content a {
    color: $black;
    text-decoration: none;
  }
  .tab-content > .tab-pane {
    display: block;
    opacity: 1;
  }
}

